--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -37,7 +37,7 @@ r.DistanceFieldBuild.EightBit=False
 r.GenerateLandscapeGIData=False
 r.DistanceFieldBuild.Compress=False
 r.TessellationAdaptivePixelsPerTriangle=48.000000
-r.SeparateTranslucency=False
+r.SeparateTranslucency=True
 r.TranslucentSortPolicy=0
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 vr.VRS.HMDFixedFoveationLevel=0
@@ -45,19 +45,19 @@ r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
 r.DefaultFeature.Bloom=True
-r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusion=True
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
-r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure=True
 r.DefaultFeature.AutoExposure.Method=0
 r.DefaultFeature.AutoExposure.Bias=1.000000
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
 r.UsePreExposure=True
 r.EyeAdaptation.EditorOnly=False
-r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.MotionBlur=True
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=False
 r.SSGI.Enable=False
-r.DefaultFeature.AntiAliasing=0
+r.DefaultFeature.AntiAliasing=2
 r.DefaultFeature.LightUnits=1
 r.DefaultBackBufferPixelFormat=4
 r.Shadow.UnbuiltPreviewInGame=True
@@ -124,7 +124,7 @@ VisualizeCalibrationGrayscaleMaterialPath=/Engine/EngineMaterials/PPM_DefaultCal
 EditorStartupMap=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap
 LocalMapOptions=
 TransitionMap=None
-bUseSplitscreen=False
+bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
@@ -139,7 +139,7 @@ GlobalDefaultServerGameMode=None
 MinimumiOSVersion=IOS_12
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Mobile
+TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
@@ -149,5 +149,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_2DSideScrollerBP",NewGameName="/Script/Nenyokki")
 
 [/Script/Slate.SlateSettings]
-bExplicitCanvasChildZOrder=True
+bExplicitCanvasChildZOrder=False
+
+[/Script/Engine.UserInterfaceSettings]
+UIScaleRule=Custom
+CustomScalingRuleClass=/Script/Nenyokki.MyDPICustomScalingRule
 
