--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,7 @@ ProjectName=2D Side Scroller Game Blueprint Template
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="MobileStarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
